Fix color and layout

--- a/src/components/vespe.css
+++ b/src/components/vespe.css
@@ -7,6 +7,6 @@
   border-color: var(--color-secondary);
 }
 
-.vespe .button {
+.vespe table .button {
   background-color: var(--color-accent-dark);
 }
